[package]
edition = "2021"
name = "mw-job-runner"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
clap = {version = "3.1.18", features = ["derive"]}
serde = {version = "1.0.137", features = ["derive"]}
serde_json = "1.0.81"
sysinfo = "0.24.3"
tokio = {version = "1.19.2", features = ["full"]}
tracing = "0.1.35"
tracing-subscriber = "0.2.0"
futures = "0.3.21"